[workspace]
members = [
    "crates/zlib-searcher",
    "crates/zlib-searcher-core",
    "crates/zlib-searcher-desktop",
    "crates/tantivy-meta-tokenizer"
]


[workspace.package]
edition = "2021"
authors = ["The zLib Searcher Authors"]
description = "search z-library index."
homepage = "https://github.com/zlib-searcher/zlib-searcher"
repository = "https://github.com/zlib-searcher/zlib-searcher"
license = "MIT"
exclude = [".github/", "index/", "frontend/"]


[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1


[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0"
tantivy = { version = "0.19", default-features = false }

zlib-searcher-core = { path = "crates/zlib-searcher-core" }
tantivy-meta-tokenizer = { path = "crates/tantivy-meta-tokenizer" }
