[workspace]
members = [
    "crates/book-searcher",
    "crates/book-searcher-core",
    "crates/book-searcher-desktop",
    "crates/tantivy-meta-tokenizer"
]


[workspace.package]
edition = "2021"
authors = ["The Book Searcher Authors"]
description = "Create and search books index, create your private library"
homepage = "https://github.com/book-searcher-org/book-searcher"
repository = "https://github.com/book-searcher-org/book-searcher"
license = "BSD-3-Clause"
exclude = [".github/", "index/", "frontend/"]


[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1


[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0"
tantivy = { version = "0.19", default-features = false }

book-searcher-core = { path = "crates/book-searcher-core" }
tantivy-meta-tokenizer = { path = "crates/tantivy-meta-tokenizer" }
