[package]
name = "book-searcher-core"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

tantivy = { workspace = true, features = ["mmap"] }
tantivy-meta-tokenizer = { path = "../tantivy-meta-tokenizer" }

csv = "1.1"
indicatif = "0.17"
sysinfo = { version = "0.27", default-features = false }


[features]
default = ["best-size"]
best-size = ["tantivy/brotli-compression"]
best-speed = ["tantivy/lz4-compression"]
