[package]
name = "book-searcher-desktop"
version = "0.7.0"
edition = "2021"
authors = ["Wybxc <wybxc@qq.com>", "zu1k <i@zu1k.com>"]
description = "search book index."
homepage = "https://github.com/book-searcher-org/book-searcher"
repository = "https://github.com/book-searcher-org/book-searcher"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
book-searcher-core = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

serde_json = "1.0"
tauri = { version = "1.2.1", features = ["dialog-open", "shell-open"] }

tokio = { version = "1", features = ["sync", "parking_lot"] }

confy = "0.5"
dunce = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
