[package]
name = "book-searcher-desktop"
version = "0.8.0"
edition = "2021"
authors = ["The Book Searcher Authors"]
description = "Create and search books index, create your private library."
homepage = "https://github.com/book-searcher-org/book-searcher"
repository = "https://github.com/book-searcher-org/book-searcher"
license = "BSD-3-Clause"


[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }


[dependencies]
anyhow = "1.0"
confy = "0.5"
dunce = "1.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "parking_lot"] }
book-searcher-core = { path = "../book-searcher-core" }

tauri = { version = "2.0.0-alpha", features = ["dialog-open", "shell-open"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
