[package]
name = "book-searcher-lambda"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
book-searcher-core = { workspace = true }
tantivy-meta-tokenizer = { workspace = true }

anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

actix-web = "4"

lambda-web = { version = "0.2.0", features=["actix4"] }
tokio = { version = "1.24", features = ["full"] }

[build-dependencies]
static-files = "0.2"

[features]
default = []
pinyin = ["book-searcher-core/pinyin"]
