[package]
name = "book-searcher"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
default-run = "book-searcher"

[dependencies]
book-searcher-core = { workspace = true }
tantivy-meta-tokenizer = { workspace = true }

anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

actix-web = "4"
actix-web-static-files = "4.0"
static-files = "0.2"

csv = "1.1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
static-files = "0.2"

[features]
default = ["best-size"]
best-size = ["book-searcher-core/best-size"]
best-speed = ["book-searcher-core/best-speed"]
