[package]
name = "tantivy-meta-tokenizer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tantivy = { workspace = true }
jieba-rs = { version = "0.6", features = ["default-dict"] }
lazy_static = "1.4"
fast2s = "0.3"
