[package]
name = "tantivy-meta-tokenizer"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tantivy = { workspace = true }
jieba-rs = { version = "0.6", features = ["default-dict"] }
lazy_static = "1.4"
fast2s = "0.3"
pinyin = { version = "0.9", optional = true }
itertools = { version = "0.10", optional = true }

[features]
default = []
pinyin = ["dep:pinyin", "dep:itertools"]
