[package]
name = "zlib-searcher-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Wybxc <wybxc@qq.com>", "zu1k <i@zu1k.com>"]
description = "search z-library index."
homepage = "https://github.com/zu1k/zlib-searcher"
repository = "https://github.com/zu1k/zlib-searcher"
license = "MIT"


[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = [] }

zlib-searcher-core = { workspace = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
