[package]
name = "zlib-searcher-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Wybxc <wybxc@qq.com>", "zu1k <i@zu1k.com>"]
description = "search z-library index."
homepage = "https://github.com/zlib-searcher/zlib-searcher"
repository = "https://github.com/zlib-searcher/zlib-searcher"
license = "MIT"


[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
zlib-searcher-core = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

serde_json = "1.0"
tauri = { version = "1.2.1", features = ["dialog-open", "shell-open"] }

tokio = { version = "1", features = ["sync", "parking_lot"] }

reqwest = "0.11.13"
confy = "0.5.1"
dunce = "1.0.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
